Bug 508096 - After finishing editing a bundle file, Krita will not launch the next time you try to launch it
Summary: After finishing editing a bundle file, Krita will not launch the next time yo...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Resource Management (other bugs)
Version First Reported In: nightly build (please specify the git hash!)
Platform: Android Android 14.x
: NOR normal
Target Milestone: ---
Assignee: Dmitry Kazakov
URL:
Keywords: regression, release_blocker
Depends on:
Blocks:
 
Reported: 2025-08-11 02:23 UTC by AppTest
Modified: 2026-01-15 14:53 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description AppTest 2025-08-11 02:23:06 UTC
SUMMARY
See title

STEPS TO REPRODUCE
1. Go to Settings, Manage Resource Libraries, Edit Bundle
2. Make a new version of your bundle file
3. Close Krita and restart it

OBSERVED RESULT

Krita won't start, and you get the error message:

"Krita: Fatal error

Could not remove storage [bundle name] from the database

Krita will quit now."

Krita quits, and the same result will occur if you try to launch it again.

EXPECTED RESULT
Krita launches

SOFTWARE/OS VERSIONS
Android 16
Krita 5.3 nightly
git 3d98e69
arm64 apk
Comment 1 Lynx3d 2025-09-15 12:06:55 UTC
This issue seems to occur when a bundle is removed from the resource folder, editing a bundle is just one way to create that situation.
It is also not OS specific, as it happens here on Linux, 5.3.0-prealpha (git 6fd2d50)

In console, I get an additional error message like this:

ERROR: deleteStorage: Failed to execute sql from file
       file: inline://delete_current_resources_for_storage
       statement: 0
       error: FOREIGN KEY constraint failed Unable to fetch row
("Could not remove storage /home/lynx/.local/share/krita/[resource_bundle_name].bundle from the database")
Comment 2 Wolfgang Baer 2025-10-10 16:49:04 UTC
maybe related but observed on Windows:
https://krita-artists.org/t/5-3-new-edit-bundle-function-ux-irritating/143748
Comment 3 Dmitry Kazakov 2026-01-15 14:17:59 UTC
Okay, the problem happens because when you remove the bundle, some external resources may still be linked to that. And removing the bundle will make them broken.
Comment 4 Dmitry Kazakov 2026-01-15 14:53:39 UTC
Git commit 34c55c0bb3f458c79f23a2b70fa36595e241e9ab by Dmitry Kazakov.
Committed on 15/01/2026 at 14:53.
Pushed by dkazakov into branch 'master'.

Fix deletion of a resource storage

We should also remove all resource-tag links before the removal
of actual resources. FOREIGN KEY constraint tracks it down
correctly.

M  +7    -0    libs/resources/KisResourceCacheDb.cpp
M  +1    -0    libs/resources/sql.qrc
A  +8    -0    libs/resources/sql/delete_resource_tags_for_storage_indirect.sql

https://invent.kde.org/graphics/krita/-/commit/34c55c0bb3f458c79f23a2b70fa36595e241e9ab