Fix deletion of a resource storage

We should also remove all resource-tag links before the removal
of actual resources. FOREIGN KEY constraint tracks it down
correctly.

BUG:508096